manifests/platform/base/networking/envoy-gateway/envoy-gateway-internal/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-internal
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-gateway-internal
  listeners:
    - name: https
      allowedRoutes:
        namespaces:
          from: All
      hostname: "*.chik4ge.me"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-chik4ge-me-tls
